[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/prompt/prompt.png" type="Texture2D" id=1]
[ext_resource path="res://entities/prompt/prompt.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "hover"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.75 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "prompt_close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 3, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "prompt_open"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "prompt_use"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("HoverAnimation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.5 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [ false ],
"method": "stop"
} ]
}

[node name="Prompt" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 200
texture = ExtResource( 1 )
offset = Vector2( 0, -1.584 )
hframes = 4

[node name="HoverAnimation" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 1 )

[node name="PromptAnimation" type="AnimationPlayer" parent="."]
anims/prompt_close = SubResource( 2 )
anims/prompt_open = SubResource( 3 )
anims/prompt_use = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
